base/safy/base/safy-document-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: safy-document-service-deployment
  labels:
    app: safy-document-service
spec:
  selector:
    matchLabels:
      app: safy-document-service
  template:
    metadata:
      labels:
        app: safy-document-service
    spec:
      containers:
      - name: application
        image: ghcr.io/safy-io/safy/safy-document-service:master
        imagePullPolicy: Always

        resources:
          requests:
            cpu: 50m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 2Gi

        ports:
        - name: http
          containerPort: 8799
          protocol: TCP
        
        startupProbe:
          httpGet:
            path: /api/info
            port: http
          failureThreshold: 20
        livenessProbe:
          httpGet:
            path: /api/info
            port: http
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /api/info
            port: http
          failureThreshold: 1

      - name: clamav
        image: clamav/clamav:1.2
        imagePullPolicy: Always

        resources:
          requests:
            cpu: 50m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 2Gi

        ports:
        - name: tcp
          containerPort: 3310
          protocol: TCP
        
        startupProbe:
          initialDelaySeconds: 60
          failureThreshold: 3
          periodSeconds: 30
          tcpSocket:
            port: tcp
          timeoutSeconds: 1
        livenessProbe:
          initialDelaySeconds: 300
          failureThreshold: 3
          periodSeconds: 10
          tcpSocket:
            port: tcp
          timeoutSeconds: 1
        readinessProbe:
          initialDelaySeconds: 90
          failureThreshold: 3
          periodSeconds: 10
          tcpSocket:
            port: tcp
          timeoutSeconds: 1
