base/safy/base/safy-trusted-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: safy-trusted-service-deployment
  labels:
    app: safy-trusted-service
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: safy-trusted-service
  template:
    metadata:
      labels:
        app: safy-trusted-service
    spec:
      containers:
      - name: application
        image: ghcr.io/safy-io/safy/safy-trusted-service:1.3.1
        imagePullPolicy: Always

        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: "1"
            memory: 2Gi

        ports:
        - name: http
          containerPort: 8789
          protocol: TCP
        
        startupProbe:
          httpGet:
            path: /api/health
            port: http
          failureThreshold: 20
        livenessProbe:
          httpGet:
            path: /api/health
            port: http
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /api/health
            port: http
          failureThreshold: 1
      
        volumeMounts: []

      volumes: []
