base/safy/base/safy-document-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: safy-document-service-service
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: safy-document-service
